# OpenRLA

./: .gitmodules  README.md
DKDHondt14/: LICENSE  README.md  danmark14EU.ipynb
StarkRLAJS/: Tools for Comparison Risk-Limiting Election Audits.html  javascript.js  sampler.py
StarkRLAJS/Tools for Comparison Risk-Limiting Election Audits_files/: BigInt.js  jquery.flot.js  jquery.min.js  pbsDefault(1).css  pbsDefault.css  sha256.js
architecture/: Makefile  RLA.bon  Scenarios.bon
datasets/Dominion-CO_Clear_Creek_Co/: Ballot.txt  CvrExport-original.json  CvrExport.json  PrecinctPortionManifest.json
openrla-assistant/: README.md  demo.sh  democontrol.sh
openrla-assistant/backend/: LICENSE  Makefile  README.md  open-rla.cabal  stack.yaml
openrla-assistant/backend/app/: Main.hs
openrla-assistant/backend/sql/: schema.sql
openrla-assistant/backend/src/: Action.hs  Controller.hs  Db.hs  OpenRLA.hs  Query.hs  Statement.hs  Types.hs
openrla-assistant/backend/src/Action/: Audit.hs  Ballot.hs  Election.hs
openrla-assistant/backend/src/Controller/: Audit.hs  Ballot.hs  Election.hs  Manifest.hs
openrla-assistant/backend/src/OpenRLA/: Audit.hs  Controller.hs  Db.hs  Internal.hs  Statement.hs  Types.hs
openrla-assistant/backend/src/OpenRLA/Controller/: Audit.hs  Ballot.hs  Election.hs  Manifest.hs
openrla-assistant/backend/src/OpenRLA/Statement/: Audit.hs  Ballot.hs  Election.hs  Manifest.hs
openrla-assistant/backend/test/: IntegrationTests.hs  JsonTestSupport.hs  Spec.hs  Test.hs  TestSupport.hs
openrla-assistant/backend/test/IntegrationTests/: Audit.hs  Ballot.hs  Election.hs  Expected.hs  Fixture.hs  Initial.hs  Manifest.hs
openrla-assistant/backend/test/data/dominion/: ContestManifest.json  TestBallotManifest.json  TestCandidateManifest.json  TestContestManifest.json
openrla-assistant/backend/test/data/dominion/example/: BallotTypeManifest.json  CandidateManifest.json  Configuration.json  CountingGroupManifest.json  PartyManifest.json  TabulatorManifest.json
openrla-assistant/backend/test/data/dominion/test-ballots/: ballot-1  ballot-10  ballot-100  ballot-11  ballot-12  ballot-13  ballot-14  ballot-15  ballot-16  ballot-17  ballot-18  ballot-19  ballot-2  ballot-20  ballot-21  ballot-22  ballot-23  ballot-24  ballot-25  ballot-26  ballot-27  ballot-28  ballot-29  ballot-3  ballot-30  ballot-31  ballot-32  ballot-33  ballot-34  ballot-35  ballot-36  ballot-37  ballot-38  ballot-39  ballot-4  ballot-40  ballot-41  ballot-42  ballot-43  ballot-44  (+60 more)
openrla-assistant/frontend/: README.md  main.js  package.json  webpack.config.js
openrla-assistant/frontend/src/: component.js  index.js  index.jsx  util.js
openrla-assistant/frontend/src/action/: addElection.js  fetchActiveAudit.js  fetchActiveElection.js  fetchAuditMarks.js  fetchAuditSample.js  fetchBallots.js  fetchContests.js  fetchExistingState.js  fetchOutcomes.js  resetElection.js  saveElection.js  setPage.js  submitAuditMarks.js  submitBallotImages.js  submitBallotManifest.js  submitCandidateManifest.js  submitContestManifest.js  submitNewAudit.js  submitOutcomes.js
openrla-assistant/frontend/src/component/: archive-info-card.jsx  archive.jsx  audit-info-card.jsx  audit.jsx  election-info-card.jsx  election.jsx  home-button.jsx  home.jsx  main.jsx  start.jsx
openrla-assistant/frontend/src/component/archive/: index.jsx
openrla-assistant/frontend/src/component/audit/: ActiveAudit.jsx  AuditBallot.jsx  AuditInfo.jsx  AuditMark.jsx  AuditMarkList.jsx  ContestStats.jsx  DefineAudit.jsx  NoAudit.jsx  index.jsx
openrla-assistant/frontend/src/component/audit/AuditBallot/: ContestMarkForm.jsx  index.jsx
openrla-assistant/frontend/src/component/election/: ballot-manifest-card.jsx  candidate-manifest-card.jsx  cast-vote-records-card.jsx  contest-manifest-card.jsx  contest-manifest-modal.jsx  election-data.jsx  election-summary.jsx  index.jsx  summary.jsx  view-contest-manifest-button.jsx
openrla-assistant/frontend/src/component/election/BallotImagesCard/: BallotImages.jsx  index.jsx
openrla-assistant/frontend/src/component/election/BallotManifestCard/: BallotManifest.jsx  index.jsx
openrla-assistant/frontend/src/component/election/CVRManifestCard/: index.jsx
openrla-assistant/frontend/src/component/election/CandidateManifestCard/: CandidateManifest.jsx  index.jsx
openrla-assistant/frontend/src/component/election/ContestManifestCard/: ContestManifest.jsx  index.jsx
openrla-assistant/frontend/src/component/election/FileUploadCard/: index.jsx
openrla-assistant/frontend/src/component/home/: ArchiveInfoCard.jsx  AuditInfoCard.jsx  ElectionInfoCard.jsx  archive-info-card.jsx  audit-info-card.jsx  election-info-card.jsx  index.jsx
openrla-assistant/frontend/src/component/outcomes/: ContestOutcome.jsx  index.jsx
openrla-assistant/frontend/src/reducer/: default-state.js  defaultState.js  index.js
openrla-assistant/frontend/src/selector/: computeASN.js  is-audit-active.js  is-election-defined.js  isElectionDefined.js  pivot-contests.js  pivotAuditMarks.js  pivotBallots.js  pivotContests.js
openrla-assistant/frontend/static/: screen.css
openrla-assistant/frontend/view/: index.html  splash.html
quick-sampler/: .jshintrc  .travis.yml  Gruntfile.js  HISTORY.md  README.md  TODO.md  bower.json  package.json
quick-sampler/app/: index.html
quick-sampler/app/scripts/: app.js  directives.js  services.js
quick-sampler/app/scripts/controllers/: dev.js  form.js  nav.js
quick-sampler/app/styles/: main.css
quick-sampler/app/templates/directives/: form_input.html
quick-sampler/app/templates/partials/: about.html  main.html
quick-sampler/docs/: development.md
quick-sampler/test/: .jshintrc  karma.conf.js  protractor.conf.js
quick-sampler/test/e2e/: test.js
quick-sampler/test/unit/: formControllersSpec.js  servicesSpec.js
rivest-sampler-tests/: README.md  bower.json  tests.json
src/: ballotPollAudit_fcf.v  ln.v
src/fcf/: #Bernoulli.v#  #Rat.v#  #ballotPollAudit_fcf.v#  BallotPollAudit.hs  Makefile.coq  ballotPollAudit.v  ballotPollAudit_fcf.v~  test.v~
(+11 files in other folders)
