name:                open-rla
version:             0.1.0.0
synopsis:            OpenRLA Assistant for risk-limiting post-election audits.
description:         Please see README.md
homepage:            https://github.com/FreeAndFair/OpenRLA#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              Free & Fair
maintainer:          josephkennethranweiler@gmail.com
copyright:           2016 Free & Fair
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     OpenRLA
  other-modules:       Action
                     , Action.Audit
                     , Action.Ballot
                     , Action.Election
                     , Controller
                     , Db
                     , Query
                     , Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , direct-sqlite
                     , filepath
                     , here
                     , scotty
                     , sqlite-simple
                     , text
                     , transformers
                     , wai
                     , wai-extra
  default-language:    Haskell2010

executable open-rla-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , open-rla
  default-language:    Haskell2010

test-suite open-rla-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , open-rla
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/FreeAndFair/OpenRLA
