name:                open-rla
version:             0.1.0.0
synopsis:            OpenRLA Assistant for risk-limiting post-election audits.
description:         Please see README.md
homepage:            https://github.com/FreeAndFair/OpenRLA#readme
license:             AllRightsReserved
license-file:        LICENSE
author:              Free & Fair
maintainer:          josephkennethranweiler@gmail.com
copyright:           2016 Free & Fair
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     OpenRLA
                     , OpenRLA.Controller
                     , OpenRLA.Controller.Audit
                     , OpenRLA.Controller.Ballot
                     , OpenRLA.Controller.Election
                     , OpenRLA.Controller.Manifest
                     , OpenRLA.Db
                     , OpenRLA.Statement
                     , OpenRLA.Statement.Audit
                     , OpenRLA.Statement.Ballot
                     , OpenRLA.Statement.Election
                     , OpenRLA.Statement.Manifest
                     , OpenRLA.Types
                     , OpenRLA.Vendor.Dominion
  other-modules:       OpenRLA.Internal
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , aeson-qq
                     , bytestring
                     , direct-sqlite
                     , directory
                     , filepath
                     , here
                     , http-types
                     , random
                     , scotty
                     , sqlite-simple
                     , text
                     , transformers
                     , wai
                     , wai-extra
  default-language:    Haskell2010
  default-extensions:  NamedFieldPuns
                     , OverloadedStrings
                     , RecordWildCards
                     , QuasiQuotes

executable open-rla-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , open-rla
  default-language:    Haskell2010

test-suite open-rla-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  other-modules:       IntegrationTests
                     , IntegrationTests.Audit
                     , IntegrationTests.Ballot
                     , IntegrationTests.Initial
                     , IntegrationTests.Election
                     , IntegrationTests.Expected
                     , IntegrationTests.Manifest
                     , JsonTestSupport
                     , TestSupport
  build-depends:       aeson
                     , aeson-qq
                     , base
                     , bytestring
                     , directory
                     , filepath
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , open-rla
                     , scotty
                     , sqlite-simple
                     , tasty
                     , tasty-hspec
                     , tasty-hunit
                     , temporary
                     , text
                     , time
                     , unordered-containers
                     , wai
                     , wai-extra
  ghc-options:         -threaded -O2 -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  NamedFieldPuns
                     , OverloadedStrings
                     , RecordWildCards
                     , QuasiQuotes

source-repository head
  type:     git
  location: https://github.com/FreeAndFair/OpenRLA
